--- a/doctor_consulatation_doctor_list.html
+++ b/doctor_consulatation_doctor_list.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html>
 <head>
 	<title>PRYDE</title>
@@ -130,73 +130,73 @@
 			</div>
 			<div class="specialities_toggle_menu" style="display: none;">
 				<div class="row">
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/dermatology.png" alt="line image">
 							<p>Dermatology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/ENT.png" alt="line image">
 							<p>ENT</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/dentistry.png" alt="line image">
 							<p>Dentistry</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/general_GP.png" alt="line image">
 							<p>General Physician - GP</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/medicine.png" alt="line image">
 							<p>Internal Medicine</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/Gastroenterology.png" alt="line image">
 							<p>Gastroenterology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/nd.png" alt="line image">
 							<p>Nutrition & Dietetics</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/doctor.png" alt="line image">
 							<p>Obstetrics & Gynaecology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/nurse.png" alt="line image">
 							<p>Paediatrics</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/psychiatry.png" alt="line image">
 							<p>Psychiatry</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/drug.png" alt="line image">
 							<p>Psychology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/syrings.png" alt="line image">
 							<p>Pulmonology</p>
@@ -238,35 +238,35 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/1.png" alt="line image">
 							<p>Qualification:</p>
 							<p>MBBS,MD (DVL)</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/2.png" alt="line image">
 							<p>Speciality:</p>
 							<p>Dermatology</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/3.png" alt="line image">
 							<p>Years of Experience:</p>
 							<p>5</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/4.png" alt="line image">
 							<p>Available days:</p>
 							<p>Mon - Sat</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/5.png" alt="line image">
 							<p>Available timings: </p>
@@ -304,35 +304,35 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/1.png" alt="line image">
 							<p>Qualification:</p>
 							<p>MBBS,MD (DVL)</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/2.png" alt="line image">
 							<p>Speciality:</p>
 							<p>Dermatology</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/3.png" alt="line image">
 							<p>Years of Experience:</p>
 							<p>5</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/4.png" alt="line image">
 							<p>Available days:</p>
 							<p>Mon - Sat</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/5.png" alt="line image">
 							<p>Available timings: </p>
@@ -370,35 +370,35 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/1.png" alt="line image">
 							<p>Qualification:</p>
 							<p>MBBS,MD (DVL)</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/2.png" alt="line image">
 							<p>Speciality:</p>
 							<p>Dermatology</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/3.png" alt="line image">
 							<p>Years of Experience:</p>
 							<p>5</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/4.png" alt="line image">
 							<p>Available days:</p>
 							<p>Mon - Sat</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/5.png" alt="line image">
 							<p>Available timings: </p>
