--- a/doctor_consulatation_v(3).html
+++ b/doctor_consulatation_v(3).html
@@ -143,112 +143,112 @@
 			</div>
 			<div class="specialities_toggle_menu">
 				<div class="row">
-					<div class="col-lg-3 border border-left-0 border-top-0">
+					<div class="col-lg-3 col-sm-6 border-right border-bottom">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/dermatology.png" alt="line image">
 								<hr>
-								<p class="font_bold">Dermatology</p>
+								<p class="text-white font_bold">Dermatology</p>
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-left-0 border-top-0">
+					<div class="col-lg-3 col-sm-6 border-right border-bottom">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/ENT.png" alt="line image">
 								<hr>
-								<p class="font_bold">ENT</p>
+								<p class="text-white font_bold">ENT</p>
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-left-0 border-top-0">
+					<div class="col-lg-3 col-sm-6 border-right border-bottom">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/dentistry.png" alt="line image">
 								<hr>
-								<p class="font_bold">Dentistry</p>
+								<p class="text-white font_bold">Dentistry</p>
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-left-0 border-top-0 border-right-0">
+					<div class="col-lg-3 col-sm-6  border-bottom">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/general_GP.png" alt="line image">
 								<hr>
-								<p class="font_bold">General Physician - GP</p>
+								<p class="text-white font_bold">General Physician - GP</p>
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-left-0 border-top-0">
+					<div class="col-lg-3 col-sm-6 border-right border-bottom">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/medicine.png" alt="line image">
 								<hr>
-								<p class="font_bold">Internal Medicine</p>
+								<p class="text-white font_bold">Internal Medicine</p>
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-left-0 border-top-0 border-right-0">
+					<div class="col-lg-3 col-sm-6 border-right border-bottom">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/Gastroenterology.png" alt="line image">
 								<hr>
-								<p class="font_bold">Gastroenterology</p>
+								<p class="text-white font_bold">Gastroenterology</p>
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-top-0">
+					<div class="col-lg-3 col-sm-6 border-right border-bottom">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/nd.png" alt="line image">
 								<hr>
-								<p class="font_bold">Nutrition & Dietetics</p>
+								<p class="text-white font_bold">Nutrition & Dietetics</p>
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-left-0 border-top-0 border-right-0">
+					<div class="col-lg-3 col-sm-6  border-bottom">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/doctor.png" alt="line image">
 								<hr>
-								<p class="font_bold">Obstetrics & Gynaecology</p>
+								<p class="text-white font_bold">Obstetrics & Gynaecology</p>
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-left-0 border-top-0 border-bottom-0">
+					<div class="col-lg-3 col-sm-6 border-right">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/nurse.png" alt="line image">
 								<hr>
-								<p class="font_bold">Paediatrics</p>
+								<p class="text-white font_bold">Paediatrics</p>
 							</div>
 						</a>
 					</div>
 		
-				<div class="col-lg-3 border border-left-0 border-top-0 border-bottom-0">
+				<div class="col-lg-3 col-sm-6 border-right">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/psychiatry.png" alt="line image">
 								<hr>
-								<p class="font_bold">Psychiatry</p>
+								<p class="text-white font_bold">Psychiatry</p>
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-left-0 border-top-0 border-bottom-0">
+					<div class="col-lg-3 col-sm-6 border-right">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/drug.png" alt="line image">
 								<hr>
-								<p class="font_bold">Psychology</p>
+								<p class="text-white font_bold">Psychology</p>
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3">
+					<div class="col-lg-3 col-sm-6">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/syrings.png" alt="line image">
 								<hr>
-								<p class="font_bold">Pulmonology</p>
+								<p class="text-white font_bold">Pulmonology</p>
 							</div>
 						</a>
 					</div>
