--- a/e-prescription.html
+++ b/e-prescription.html
@@ -119,7 +119,9 @@
 				<p>Qualification: MBBS, MD (DVL)</p>
 				<p>Speciality: Dermatology</p>
 			</div>
-			<input type="text" name="" class="form-group" placeholder="Search for medicine...">
+			<div class="line_before">
+				<input type="text" name="" class="form-group" placeholder="Search for medicine...">
+			</div>
 			<div class="index_medicine">
 				<span class="medicine_name">Medicine 1 gfhrthrthfg</span>
 				<span class="line"><hr></span>
