--- a/family_doctor(new).html
+++ b/family_doctor(new).html
@@ -152,35 +152,35 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/1.png" alt="line image">
 							<p>Qualification:</p>
 							<p>MBBS,MD (DVL)</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/2.png" alt="line image">
 							<p>Speciality:</p>
 							<p>Dermatology</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/3.png" alt="line image">
 							<p>Years of Experience:</p>
 							<p>5</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/4.png" alt="line image">
 							<p>Available days:</p>
 							<p>Mon - Sat</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/5.png" alt="line image">
 							<p>Available timings: </p>
@@ -218,35 +218,35 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/1.png" alt="line image">
 							<p>Qualification:</p>
 							<p>MBBS,MD (DVL)</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/2.png" alt="line image">
 							<p>Speciality:</p>
 							<p>Dermatology</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/3.png" alt="line image">
 							<p>Years of Experience:</p>
 							<p>5</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/4.png" alt="line image">
 							<p>Available days:</p>
 							<p>Mon - Sat</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/5.png" alt="line image">
 							<p>Available timings: </p>
@@ -284,35 +284,35 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/1.png" alt="line image">
 							<p>Qualification:</p>
 							<p>MBBS,MD (DVL)</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/2.png" alt="line image">
 							<p>Speciality:</p>
 							<p>Dermatology</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/3.png" alt="line image">
 							<p>Years of Experience:</p>
 							<p>5</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/4.png" alt="line image">
 							<p>Available days:</p>
 							<p>Mon - Sat</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/5.png" alt="line image">
 							<p>Available timings: </p>
