--- a/landing_page.html
+++ b/landing_page.html
@@ -22,7 +22,6 @@
 </head>
 <body>
 	<header>
-		
 		<!-- <div class="header_top">
 			<div class="custom_container">
 				<ul class="login_register">
@@ -113,7 +112,7 @@
 	<section class="search_toggle_section">
 		<div class="search_content">
 			<div class="search_icon_box">
-				<a href="javascript:void(0)" ><img src="images/search.png"></a>
+				<a href="javascript:void(0)" ><img src="images/search_white.png"></a>
 			</div>
 			<div class="search_area">
 				<h3>Search Anything:</h3>
@@ -162,37 +161,37 @@
 				<div class="row">
 					<div class="col-md-4">
 						<ul class="nav nav-tabs row">
-							<li class="col-md-6 nav-item">
+							<li class="col-md-6 mb-3 nav-item">
 								<a class="tab_link active" data-toggle="tab" href="#doctor_consultation">
 									<img src="images/our_service1.png">
 									<p>Doctor Consultation</p>
 								</a>
 							</li>
-							<li class="col-md-6 nav-item">
+							<li class="col-md-6 mb-3 nav-item">
 								<a class="tab_link" data-toggle="tab" href="#diagnostics">
 									<img src="images/our_service2.png">
 									<p>Diagnostics & Imaging</p>
 								</a>
 							</li>
-							<li class="col-md-6 mt-3 mb-3 nav-item">
+							<li class="col-md-6 mb-3 nav-item">
 								<a class="tab_link" data-toggle="tab" href="#physiotherapy">
 									<img src="images/our_service3.png">
 									<p>Physiotherapy</p>
 								</a>
 							</li>
-							<li class="col-md-6 mt-3 mb-3 nav-item">
+							<li class="col-md-6 mb-3 nav-item">
 								<a class="tab_link" data-toggle="tab" href="#medicalRegNo">
 									<img src="images/our_service4.png">
 									<p>Medicines & Medical Supplies</p>
 								</a>
 							</li>
-							<li class="col-md-6 nav-item">
+							<li class="col-md-6 mb-3 nav-item">
 								<a class="tab_link" data-toggle="tab" href="#nursing">
 									<img src="images/our_service5.png">
 									<p>Nursing</p>
 								</a>
 							</li>
-							<li class="col-md-6 nav-item">
+							<li class="col-md-6 mb-3 nav-item">
 								<a class="tab_link" data-toggle="tab" href="#my_wellness">
 									<img src="images/our_service6.png">
 									<p>My Wellness</p>
@@ -320,7 +319,7 @@
 				<div class="section_title">
 				<h2 class="font_bold">Our Customers<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
 			</div>
-			<div class="row">
+			<div class="our_customer_slider">
 				<div class="col-md col-sm-4 mt-3">
 					<div class="customer_image_box">
 						<img src="images/customer_1.png">
@@ -329,6 +328,21 @@
 				<div class="col-md col-sm-4 mt-3">
 					<div class="customer_image_box">
 						<img src="images/customer_2.png">
+					</div>
+				</div>
+				<div class="col-md col-sm-4 mt-3">
+					<div class="customer_image_box">
+						<img src="images/customer_3.png">
+					</div>
+				</div>
+				<div class="col-md col-sm-6 mt-3">
+					<div class="customer_image_box">
+						<img src="images/customer_4.png">
+					</div>
+				</div>
+				<div class="col-md col-sm-6 mt-3">
+					<div class="customer_image_box">
+						<img src="images/customer_5.png">
 					</div>
 				</div>
 				<div class="col-md col-sm-4 mt-3">
