--- a/medicine_supply.html
+++ b/medicine_supply.html
@@ -127,31 +127,31 @@
 			</div>
 			<div class="specialities_toggle_menu">
 				<div class="row">
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/medicine.png" alt="line image">
 							<p>Prescription Medicines</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/otc.png" alt="line image">
 							<p>Over The Counter (OTC)</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/baby_care.png" alt="line image">
 							<p>Baby Care</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/p_care.png" alt="line image">
 							<p>Personal Care</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/Gastroenterology.png" alt="line image">
 							<p>Medical & Surgical Devices</p>
