--- a/nursing.html
+++ b/nursing.html
@@ -127,37 +127,37 @@
 			</div>
 			<div class="specialities_toggle_menu">
 				<div class="row">
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/transactional.jpg" alt="line image">
 							<p>Transactional</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/child.jpg" alt="line image">
 							<p>Child Vaccination</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/adult.jpg" alt="line image">
 							<p>Adult Vaccination</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/basic_nursing.jpg" alt="line image">
 							<p>Basic Nursing Care</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/advance_nursing.jpg" alt="line image">
 							<p>Advanced Nursing Care</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/p_package.png" alt="line image">
 							<p>Rehabilitation Care</p>
@@ -174,17 +174,17 @@
 				<h2>Popular with Pride<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
 			</div>
 			<div class="row">
-				<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="col-xl-3 col-lg-4 col-md-6">
 					<div class="baby_care text-center">
 						<img src="images/serinze.jpg">
 						<p class="text_upper font_bold">NURSING CARE (BASIC NURSING) - 12 HOURS </p>
 						<p><span class="blue_price" >&#8377 1,200</span></p>
 						<div class="doctor_details mt_2">
-							<button>Book an Assessment</button>
+							<button class="mt-4">Book an Assessment</button>
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="col-xl-3 col-lg-4 col-md-6">
 					<div class="baby_care text-center">
 						<img src="images/serinze.jpg">
 						<p class="text_upper font_bold">POST SURGICAL CARE(ADVANCED NURSING) - 12 HOURS</p>
@@ -194,7 +194,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="col-xl-3 col-lg-4 col-md-6">
 					<div class="baby_care text-center">
 						<img src="images/serinze.jpg">
 						<p class="text_upper font_bold">MOTHER AND CHILD CARE(ADVANCED NURSING) - 12 HOURS</p>
@@ -204,7 +204,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="col-xl-3 col-lg-4 col-md-6">
 					<div class="baby_care text-center">
 						<img src="images/serinze.jpg">
 						<p class="text_upper font_bold">PALLIATIVE CARE / END OF LIFE CARE (ADVANCED NURSING) - 24 HOURS</p>
@@ -224,7 +224,7 @@
 				<h2>Features<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
 			</div>
 			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-4">
+				<div class="col-lg-4 col-md-6">
 					<div class="feature_detail_card">
 						<img src="images/smart_patient.png">
 						<p class="font_bold">Smart Patient</p>
@@ -235,7 +235,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">
+				<div class="col-lg-4 col-md-6">
 					<div class="feature_detail_card">
 						<img src="images/connect-with-doc.png">
 						<p class="font_bold">Smart Doctor</p>
@@ -246,7 +246,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">
+				<div class="col-lg-4 col-md-6">
 					<div class="feature_detail_card">
 						<img src="images/desk.png">
 						<p class="font_bold">Unified Registration Desk</p>
@@ -257,7 +257,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">
+				<div class="col-lg-4 col-md-6">
 					<div class="feature_detail_card">
 						<img src="images/smart_pharmacy.jpg">
 						<p class="font_bold">Smart Pharmacy</p>
@@ -268,7 +268,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">
+				<div class="col-lg-4 col-md-6">
 					<div class="feature_detail_card">
 						<img src="images/smart_pathology.jpg">
 						<p class="font_bold">Smart Pathology</p>
@@ -279,7 +279,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">
+				<div class="col-lg-4 col-md-6">
 					<div class="feature_detail_card">
 						<img src="images/smart-radio.png">
 						<p class="font_bold">Smart Radiology</p>
@@ -300,7 +300,7 @@
 				<h2 class="text-white">Benefits<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
 			</div>
 			<div class="row">
-				<div class="col-lg-3 col-md-6 col-sm-12 border border-left-0 border-top-0">
+				<div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 border border-left-0 border-top-0">
 					<div class="feature_detail_card_blue">
 						<img src="images/reports.png">
 						<hr>
@@ -308,7 +308,7 @@
 						<p>Smart hospital keeps all patient related data on healthcloud and generates alalytical reports</p>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-6 col-sm-12 border border-left-0 border-top-0">
+				<div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 border border-left-0 border-top-0">
 					<div class="feature_detail_card_blue">
 						<img src="images/cloud-storage.png">
 						<hr>
@@ -316,7 +316,7 @@
 						<p>All the data stored on a cloud so that it can be accessed from anywhere. </p>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-6 col-sm-12 border border-left-0 border-top-0">
+				<div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 border border-left-0 border-top-0">
 					<div class="feature_detail_card_blue">
 						<img src="images/digital.png">
 						<hr>
@@ -324,7 +324,7 @@
 						<p>Digital mode of payment enables patients to pay bill online </p>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-6 col-sm-12 border border-top-0 border-right-0">
+				<div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 border border-top-0 border-right-0">
 					<div class="feature_detail_card_blue">
 						<img src="images/seamless.png">
 						<hr>
@@ -332,7 +332,7 @@
 						<p>Patients can consult with doctors seamlessly via Telemedecine clinic app and it’s user friendly...</p>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-6 col-sm-12 border border-left-0 border-bottom-0 border-top-0">
+				<div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 border border-left-0 border-bottom-0 border-top-0">
 					<div class="feature_detail_card_blue">
 						<img src="images/call-center.png">
 						<hr>
@@ -340,7 +340,7 @@
 						<p>24*7 help desk solution for handling paitent queries. </p>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-6 col-sm-12 border border-left-0 border-bottom-0 border-top-0">
+				<div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 border border-left-0 border-bottom-0 border-top-0">
 					<div class="feature_detail_card_blue">
 						<img src="images/benefit-calender.png">
 						<hr>
@@ -348,7 +348,7 @@
 						<p>All the appointments can be viewed on a single calander for both online patients as well as...</p>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-6 col-sm-12 border border-left-0 border-bottom-0 border-top-0">
+				<div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 border border-left-0 border-bottom-0 border-top-0">
 					<div class="feature_detail_card_blue">
 						<img src="images/connect-with-doc.png">
 						<hr>
@@ -356,7 +356,7 @@
 						<p>Patients can communicate with any doctor and with any hospital/clinic by using online...</p>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-6 col-sm-12">
+				<div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
 					<div class="feature_detail_card_blue">
 						<img src="images/track.png">
 						<hr>
