--- a/nursing_detail.html
+++ b/nursing_detail.html
@@ -130,73 +130,73 @@
 			</div>
 			<div class="specialities_toggle_menu" style="display: none;">
 				<div class="row">
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/dermatology.png" alt="line image">
 							<p>Dermatology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/ENT.png" alt="line image">
 							<p>ENT</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/dentistry.png" alt="line image">
 							<p>Dentistry</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/general_GP.png" alt="line image">
 							<p>General Physician - GP</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/medicine.png" alt="line image">
 							<p>Internal Medicine</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/Gastroenterology.png" alt="line image">
 							<p>Gastroenterology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/nd.png" alt="line image">
 							<p>Nutrition & Dietetics</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/doctor.png" alt="line image">
 							<p>Obstetrics & Gynaecology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/nurse.png" alt="line image">
 							<p>Paediatrics</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/psychiatry.png" alt="line image">
 							<p>Psychiatry</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/drug.png" alt="line image">
 							<p>Psychology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/syrings.png" alt="line image">
 							<p>Pulmonology</p>
@@ -213,32 +213,42 @@
 			</div>
 			<div class="family_doctor_des">
 				<div class="row">
-					<div class="col-lg-4 col-md-4">
-						<ul class="nav nav-tabs details">
-							<div class="row">
-								<div class="col-md-6">
-									<li class="nav-item active"><a class="tab_link" data-toggle="tab" href="#about"><img src="images/about.jpg"><p>What is this</p></a></li>
-								</div>
-								<div class="col-md-6">
-									<li class="nav-item"><a class="tab_link" data-toggle="tab" href="#education"><img src="images/why.jpg"><p>Why is it done</p></a></li>
-								</div>
-								<div class="col-md-6 mt_2">
-									<li class="nav-item"><a class="tab_link" data-toggle="tab" href="#medicalRegNo"><img src="images/do.jpg"><p>Do's & Don'ts</p></a></li>
-								</div>
-								<div class="col-md-6 mt_2">
-									<li class="nav-item"><a class="tab_link" data-toggle="tab" href="#Contra"><img src="images/const.jpg"><p>Contraindications</p></a></li>
-								</div>
-							</div>
+					<div class="col-xl-4 col-lg-6">
+						<ul class="nav nav-tabs row details">
+							<li class="col-md-6 col-sm-6 mb-3 nav-item active">
+								<a class="tab_link" data-toggle="tab" href="#about">
+									<img src="images/about.jpg">
+									<p>What is this</p>
+								</a>
+							</li>
+							<li class="col-md-6 col-sm-6 mb-3 nav-item">
+								<a class="tab_link" data-toggle="tab" href="#education">
+									<img src="images/why.jpg">
+									<p>Why is it done</p>
+								</a>
+							</li>									
+							<li class="col-md-6 col-sm-6 mb-3 nav-item">
+								<a class="tab_link" data-toggle="tab" href="#medicalRegNo">
+									<img src="images/do.jpg">
+									<p>Do's & Don'ts</p>
+								</a>
+							</li>
+							<li class="col-md-6 col-sm-6 mb-3 nav-item">
+								<a class="tab_link" data-toggle="tab" href="#Contra">
+									<img src="images/const.jpg">
+									<p>Contraindications</p>
+								</a>
+							</li>
 						</ul>
 					</div>
-					<div class="col-lg-8 col-md-8">	
+					<div class="col-xl-8 col-lg-6">	
 						<div class="tab-content details">
 							<div class="tab-pane active" id="about" >
 								<span class="font_bold fs">BCG Vaccine for Child:</span>
 								<span>Endless waiting and multiple trips to a hospital / clinic can be exhausting and in many instances expensive. CallHealth provides BCG vaccination for Children within the comfort of your home at no additional cost. Our experienced nurses will ensure that these vaccinations are administered with utmost care. Reach out to us!</span>
 								<p class="blue_price">&#8377 460.27</p>
 								<div class="doctor_details mt_2">
-									<button>Book an Assessment</button>
+									<button class="mt-3">Book an Assessment</button>
 								</div>
 							</div>
 							<div class="tab-pane" id="education">
@@ -288,17 +298,17 @@
 				<h2>Popular with Pride<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
 			</div>
 			<div class="row">
-				<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="col-xl-3 col-lg-4 col-md-6">
 					<div class="baby_care text-center">
 						<img src="images/serinze.jpg">
 						<p class="text_upper font_bold">NURSING CARE (BASIC NURSING) - 12 HOURS </p>
 						<p><span class="blue_price" >&#8377 1,200</span></p>
 						<div class="doctor_details mt_2">
-							<button>Book an Assessment</button>
+							<button class="mt-4">Book an Assessment</button>
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="col-xl-3 col-lg-4 col-md-6">
 					<div class="baby_care text-center">
 						<img src="images/serinze.jpg">
 						<p class="text_upper font_bold">POST SURGICAL CARE(ADVANCED NURSING) - 12 HOURS</p>
@@ -308,7 +318,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="col-xl-3 col-lg-4 col-md-6">
 					<div class="baby_care text-center">
 						<img src="images/serinze.jpg">
 						<p class="text_upper font_bold">MOTHER AND CHILD CARE(ADVANCED NURSING) - 12 HOURS</p>
@@ -318,7 +328,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="col-xl-3 col-lg-4 col-md-6">
 					<div class="baby_care text-center">
 						<img src="images/serinze.jpg">
 						<p class="text_upper font_bold">PALLIATIVE CARE / END OF LIFE CARE (ADVANCED NURSING) - 24 HOURS</p>
