--- a/nursing_list_page.html
+++ b/nursing_list_page.html
@@ -130,73 +130,73 @@
 			</div>
 			<div class="specialities_toggle_menu" style="display: none;">
 				<div class="row">
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/dermatology.png" alt="line image">
 							<p>Dermatology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/ENT.png" alt="line image">
 							<p>ENT</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/dentistry.png" alt="line image">
 							<p>Dentistry</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/general_GP.png" alt="line image">
 							<p>General Physician - GP</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/medicine.png" alt="line image">
 							<p>Internal Medicine</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/Gastroenterology.png" alt="line image">
 							<p>Gastroenterology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/nd.png" alt="line image">
 							<p>Nutrition & Dietetics</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/doctor.png" alt="line image">
 							<p>Obstetrics & Gynaecology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/nurse.png" alt="line image">
 							<p>Paediatrics</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/psychiatry.png" alt="line image">
 							<p>Psychiatry</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/drug.png" alt="line image">
 							<p>Psychology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/syrings.png" alt="line image">
 							<p>Pulmonology</p>
@@ -213,7 +213,7 @@
 				<h2>Vaccination-child-vaccination<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
 			</div>
 			<div class="row">
-				<div class="col-lg-8 col-md-8">
+				<div class="col-xl-8 col-lg-6 col-md-12">
 					<div class="pain_mangement_main">
 						<div class="pain_management baby_care_border">
 							<p class="font_bold fs">BCG (BCG Vaccine) - Child Vaccination</p>
@@ -313,14 +313,14 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4">
+				<div class="col-xl-4 col-lg-6 col-md-12">
 					<div class="pain_mangement_right">
 						<div class="section_title">
 							<h2>Popular with Pryde<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
 						</div>
 
 						<div class="row">
-							<div class="col-12">
+							<div class="col-lg-12 col-md-6">
 								<div class="baby_care text-center">
 									<img src="images/serinze.jpg">
 									<p class="text_upper font_bold">NURSING CARE (BASIC NURSING) - 12 HOURS </p>
@@ -330,7 +330,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-12">
+							<div class="col-lg-12 col-md-6">
 								<div class="baby_care text-center">
 									<img src="images/serinze.jpg">
 									<p class="text_upper font_bold">POST SURGICAL CARE(ADVANCED NURSING) - 12 HOURS</p>
@@ -340,7 +340,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-12">
+							<div class="col-lg-12 col-md-6">
 								<div class="baby_care text-center">
 									<img src="images/serinze.jpg">
 									<p class="text_upper font_bold">MOTHER AND CHILD CARE(ADVANCED NURSING) - 12 HOURS</p>
@@ -350,7 +350,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-12">
+							<div class="col-lg-12 col-md-6">
 								<div class="baby_care text-center">
 									<img src="images/serinze.jpg">
 									<p class="text_upper font_bold">PALLIATIVE CARE / END OF LIFE CARE (ADVANCED NURSING) - 24 HOURS</p>
