--- a/appoinment_booking_based_on_doctor.html
+++ b/appoinment_booking_based_on_doctor.html
@@ -116,17 +116,17 @@
 		<div class="container">
 			<label>See a Specialist from home within minutes.</label>
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-xl-4 col-lg-6 mb-3">
 					<div>
 						<input type="text" class="form-control" placeholder="Search for Doctors by geolocation...">
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-xl-4 col-lg-6 mb-3">
 					<div>
 						<input type="text" class="form-control" placeholder="Search for Doctors by symptoms...">
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-xl-4 col-lg-6 mb-3">
 					<div>
 						<input type="text" class="form-control" placeholder="Search for Doctors by hospitals...">
 					</div>
@@ -145,73 +145,73 @@
 			</div>
 			<div class="specialities_toggle_menu" style="display: none;">
 				<div class="row">
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/dermatology.png" alt="line image">
 							<p>Dermatology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/ENT.png" alt="line image">
 							<p>ENT</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/dentistry.png" alt="line image">
 							<p>Dentistry</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/general_GP.png" alt="line image">
 							<p>General Physician - GP</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/medicine.png" alt="line image">
 							<p>Internal Medicine</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/Gastroenterology.png" alt="line image">
 							<p>Gastroenterology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/nd.png" alt="line image">
 							<p>Nutrition & Dietetics</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/doctor.png" alt="line image">
 							<p>Obstetrics & Gynaecology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/nurse.png" alt="line image">
 							<p>Paediatrics</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/psychiatry.png" alt="line image">
 							<p>Psychiatry</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/drug.png" alt="line image">
 							<p>Psychology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/syrings.png" alt="line image">
 							<p>Pulmonology</p>
@@ -229,40 +229,40 @@
 			<h2>Book Your Appointment<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
 		</div>
 		<div class="row">
-			<div class="col-lg-4 col-md-6">
+			<div class="col-xl-4 col-lg-6 mt-3">
 				<label>First Name</label>
 				<input class="form-control" type="text" name="" placeholder="Enter Your First Name">
 			</div>
-			<div class="col-lg-4 col-md-6">
+			<div class="col-xl-4 col-lg-6 mt-3">
 				<label>Middle Name</label>
 				<input class="form-control" type="text" name="" placeholder="Enter Your Middle Name">
 			</div>
-			<div class="col-lg-4 col-md-6">
+			<div class="col-xl-4 col-lg-6 mt-3">
 				<label>Last Name</label>
 				<input class="form-control" type="text" name="" placeholder="Enter Your Last Name">
 			</div>
-			<div class="col-lg-4 col-md-6">
+			<div class="col-xl-4 col-lg-6 mt-3">
 				<label>Date of Birth</label>
-				<div class="input-group mb-3">
+				<div class="input-group">
 					<div class="input-group-prepend">
 						<span class="input-group-text" id="basic-addon1"><i class="fa fa-calendar-o" aria-hidden="true"></i></span>
 					</div>
 					<input type="date" class="form-control" placeholder="Date Of Birth" aria-label="" aria-describedby="basic-addon1">
 				</div>
 			</div>
-			<div class="col-lg-4 col-md-6">
+			<div class="col-xl-4 col-lg-6 mt-3">
 				<label>Age</label>
 				<input class="form-control" type="text" name="" placeholder="Enter Your Age">
 			</div>
-			<div class="col-lg-4 col-md-6">
+			<div class="col-xl-4 col-lg-6 mt-3">
 				<label>Contact Number</label>
 				<input class="form-control" type="text" name="" placeholder="Enter Your Contact Number">
 			</div>
-			<div class="col-lg-4 col-md-6">
+			<div class="col-xl-4 col-lg-6 mt-3">
 				<label>Email Address</label>
 				<input class="form-control" type="text" name="" placeholder="Enter Your Email Address">
 			</div>
-			<div class="col-lg-4 col-md-6">
+			<div class="col-xl-4 col-lg-6 mt-3 ">
 				<label>Gender</label>
 				<div class="btn-group btn-group-toggle" data-toggle="buttons">
 					<label class="btn btn-light active">
@@ -276,14 +276,14 @@
 					</label>
 				</div>
 			</div>
-			<div class="col-lg-4 col-md-6">
+			<div class="col-xl-4 col-lg-6 mt-3">
 				<label>Upload Previous History/Report/Rescription</label>
 				<div class="upload_btn">
 					<input type="file" id="upload_file" style="display: none;">
 					<label for="upload_file">Upload File</label>
 				</div>
 			</div>
-			<div class="col-lg-4 col-md-6">
+			<div class="col-xl-4 col-lg-6 mt-3">
 				<label>Department</label>
 				<select>
 					<option value="Hospital">Hospital</option>
@@ -291,7 +291,7 @@
 					<option value="Medical">Medical</option>
 				</select>
 			</div>
-			<div class="col-lg-4 col-md-6">
+			<div class="col-xl-4 col-lg-6 mt-3">
 				<label>Doctor</label>
 				<select>
 					<option value="john Deo">Hospital</option>
@@ -339,19 +339,19 @@
 					<input class="form-check-input" type="radio" name="time" id="seven" value="seven">
 					<label class="form-check-label text-center" for="seven">04PM - 05PM</label>
 				</div>
-				<div class="form-check ">
+				<div class="form-check">
 					<input class="form-check-input" type="radio" name="time" id="eight" value="eight">
 					<label class="form-check-label text-center" for="eight">05PM - 06PM</label>
 				</div>
-				<div class="form-check ">
+				<div class="form-check">
 					<input class="form-check-input" type="radio" name="time" id="nine" value="eight">
 					<label class="form-check-label text-center" for="nine">06PM - 07PM</label>
 				</div>
-				<div class="form-check ">
+				<div class="form-check">
 					<input class="form-check-input" type="radio" name="time" id="ten" value="ten">
 					<label class="form-check-label text-center" for="ten">07PM - 08PM</label>
 				</div>
-				<div class="form-check ">
+				<div class="form-check">
 					<input class="form-check-input" type="radio" name="time" id="eleven" value="eleven">
 					<label class="form-check-label text-center" for="eleven">08PM - 09PM</label>
 				</div>
@@ -366,7 +366,7 @@
 			<input type="checkbox" class="form-check-input" value="" id="i_agree" style="display: none;">
 			<label class="form-check-label" for="i_agree">I agree all the <a href="#" class="blue_font">Terms & Conditions</a></label>
 		</div>
-		<div class="doctor_details">
+		<div class="doctor_details mt-3">
 			<button type="button">submit</button>
 		</div>
 	</div>
