--- a/doctor_consulatation.html
+++ b/doctor_consulatation.html
@@ -130,73 +130,73 @@
 			</div>
 			<div class="specialities_toggle_menu">
 				<div class="row">
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/dermatology.png" alt="line image">
 							<p>Dermatology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/ENT.png" alt="line image">
 							<p>ENT</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/dentistry.png" alt="line image">
 							<p>Dentistry</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/general_GP.png" alt="line image">
 							<p>General Physician - GP</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/medicine.png" alt="line image">
 							<p>Internal Medicine</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/Gastroenterology.png" alt="line image">
 							<p>Gastroenterology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/nd.png" alt="line image">
 							<p>Nutrition & Dietetics</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/doctor.png" alt="line image">
 							<p>Obstetrics & Gynaecology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/nurse.png" alt="line image">
 							<p>Paediatrics</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/psychiatry.png" alt="line image">
 							<p>Psychiatry</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/drug.png" alt="line image">
 							<p>Psychology</p>
 						</a>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
 							<img src="images/syrings.png" alt="line image">
 							<p>Pulmonology</p>
