--- a/doctor_consulatation_v(2).html
+++ b/doctor_consulatation_v(2).html
@@ -114,17 +114,17 @@
 		<div class="container">
 					<label>See a Specialist from home within minutes.</label>
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-xl-4 col-lg-6 mb-3">
 					<div>
 						<input type="text" class="form-control" placeholder="Search for Doctors across multiple specialities and more...">
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-xl-4 col-lg-6 mb-3">
 					<div>
 						<input type="text" class="form-control" placeholder="Search for Doctors across multiple specialities and more...">
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-xl-4 col-lg-6 mb-3">
 					<div>
 						<input type="text" class="form-control" placeholder="Search for Doctors across multiple specialities and more...">
 					</div>
@@ -143,7 +143,7 @@
 			</div>
 			<div class="specialities_toggle_menu">
 				<div class="row">
-					<div class="col-lg-3 border border-left-0 border-top-0">
+					<div class="col-lg-3 col-sm-6 border-right border-bottom">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/dermatology.png" alt="line image">
@@ -152,7 +152,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-left-0 border-top-0">
+					<div class="col-lg-3 col-sm-6 border-right border-bottom">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/ENT.png" alt="line image">
@@ -161,7 +161,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-left-0 border-top-0">
+					<div class="col-lg-3 col-sm-6 border-right border-bottom">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/dentistry.png" alt="line image">
@@ -170,7 +170,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-left-0 border-top-0 border-right-0">
+					<div class="col-lg-3 col-sm-6  border-bottom">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/general_GP.png" alt="line image">
@@ -179,7 +179,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-left-0 border-top-0">
+					<div class="col-lg-3 col-sm-6 border-right border-bottom">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/medicine.png" alt="line image">
@@ -188,7 +188,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-left-0 border-top-0 border-right-0">
+					<div class="col-lg-3 col-sm-6 border-right border-bottom">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/Gastroenterology.png" alt="line image">
@@ -197,7 +197,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-top-0">
+					<div class="col-lg-3 col-sm-6 border-right border-bottom">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/nd.png" alt="line image">
@@ -206,7 +206,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-left-0 border-top-0 border-right-0">
+					<div class="col-lg-3 col-sm-6  border-bottom">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/doctor.png" alt="line image">
@@ -215,7 +215,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-left-0 border-top-0 border-bottom-0">
+					<div class="col-lg-3 col-sm-6 border-right">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/nurse.png" alt="line image">
@@ -225,7 +225,7 @@
 						</a>
 					</div>
 		
-				<div class="col-lg-3 border border-left-0 border-top-0 border-bottom-0">
+				<div class="col-lg-3 col-sm-6 border-right">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/psychiatry.png" alt="line image">
@@ -234,7 +234,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 border border-left-0 border-top-0 border-bottom-0">
+					<div class="col-lg-3 col-sm-6 border-right">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/drug.png" alt="line image">
@@ -243,7 +243,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3">
+					<div class="col-lg-3 col-sm-6">
 						<a href="#" class="d-flex flex-wrap align-content-center">
 							<div class="feature_detail_card_blue blue_image">
 								<img src="images/syrings.png" alt="line image">
