--- a/doctor_register.html
+++ b/doctor_register.html
@@ -132,10 +132,14 @@
 						<input class="form-control" type="password" name="" placeholder="Re-enter Password">
 					</div>
 					<div class="col-lg-12 col-md-12">
-						<div class="custom-control custom-checkbox">
+						<!-- <div class="custom-control custom-checkbox">
 							<input type="checkbox" class="custom-control-input" id="customCheck1">
-							<label class="custom-control-label font_bold" for="customCheck1">Accept <a class="blue_font" href="">Terms and Conditions </a> And <a class="blue_font" href="">Privacy Policy</a> </label>
-						</div>
+							<label class="custom-control-label" for="customCheck1">Accept <a class="blue_font" href="">Terms and Conditions </a> And <a class="blue_font" href="">Privacy Policy</a> </label>
+						</div> -->
+						<div class="form-check">
+			<input type="checkbox" class="form-check-input" value="" id="i_agree" style="display: none;">
+			<label class="form-check-label" for="i_agree">I agree all the <a href="#" class="blue_font">Terms & Conditions</a></label>
+		</div>
 					</div>
 					<div class="col-lg-12 col-md-12">
 						<button>Register</button>
