--- a/follow_Up_Consultation_new.html
+++ b/follow_Up_Consultation_new.html
@@ -114,13 +114,13 @@
 		<div class="container">
 			<label>Follow Up Consultation</label>
 			<div class="row">
-				<div class="col-lg-4">
+				<div class="col-xl-4 col-lg-6 mb-3">
 						<input type="text" class="form-control" placeholder="Search for Doctors by geolocation...">
 				</div>
-				<div class="col-lg-4">
+				<div class="col-xl-4 col-lg-6 mb-3">
 						<input type="text" class="form-control" placeholder="Search for Doctors by symptoms...">
 				</div>
-				<div class="col-lg-4">
+				<div class="col-xl-4 col-lg-6 mb-3">
 						<input type="text" class="form-control" placeholder="Search for Doctors by hospitals...">
 				</div>
 			</div>
@@ -159,35 +159,35 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/1.png" alt="line image">
 							<p>Qualification:</p>
 							<p>MBBS,MD (DVL)</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/2.png" alt="line image">
 							<p>Speciality:</p>
 							<p>Dermatology</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/3.png" alt="line image">
 							<p>Years of Experience:</p>
 							<p>5</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/4.png" alt="line image">
 							<p>Available days:</p>
 							<p>Mon - Sat</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/5.png" alt="line image">
 							<p>Available timings: </p>
@@ -225,35 +225,35 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/1.png" alt="line image">
 							<p>Qualification:</p>
 							<p>MBBS,MD (DVL)</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/2.png" alt="line image">
 							<p>Speciality:</p>
 							<p>Dermatology</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/3.png" alt="line image">
 							<p>Years of Experience:</p>
 							<p>5</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/4.png" alt="line image">
 							<p>Available days:</p>
 							<p>Mon - Sat</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/5.png" alt="line image">
 							<p>Available timings: </p>
@@ -291,35 +291,35 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/1.png" alt="line image">
 							<p>Qualification:</p>
 							<p>MBBS,MD (DVL)</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/2.png" alt="line image">
 							<p>Speciality:</p>
 							<p>Dermatology</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/3.png" alt="line image">
 							<p>Years of Experience:</p>
 							<p>5</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/4.png" alt="line image">
 							<p>Available days:</p>
 							<p>Mon - Sat</p>
 						</a>
 					</div>
-					<div class="col-lg">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
 						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
 							<img src="images/5.png" alt="line image">
 							<p>Available timings: </p>
