--- a/patient_register.html
+++ b/patient_register.html
@@ -147,9 +147,9 @@
 						<input class="form-control" type="password" name="" placeholder="Re-enter Password">
 					</div>
 					<div class="col-lg-12 col-md-12">
-						<div class="custom-control custom-checkbox">
-							<input type="checkbox" class="custom-control-input" id="customCheck1">
-							<label class="custom-control-label" for="customCheck1">Accept <a class="blue_font" href="">Terms and Conditions </a> And <a class="blue_font" href="">Privacy Policy</a> </label>
+						<div class="form-check">
+							<input type="checkbox" class="form-check-input" value="" id="i_agree" style="display: none;">
+							<label class="form-check-label" for="i_agree">Accept <a class="blue_font" href="">Terms and Conditions </a> And <a class="blue_font" href="">Privacy Policy</a> </label>
 						</div>
 					</div>
 					<div class="col-lg-12 col-md-12">
